# gh-skyline-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs-pages.yml  python-ci.yml  release-artifacts.yml
docs/: MIGRATION_PLAN.md  PROGRESS.md  PUBLISHING.md  RELEASE_CHECKLIST.md  conf.py  index.rst
docs/_static/: custom.css
docs/about/: index.rst
docs/development/: index.rst
docs/getting_started/: index.rst
docs/release/: index.rst
docs/usage/: index.rst
scripts/: package_smoke_test.sh  publish_pypi.sh
src/gh_skyline/: __init__.py  __main__.py
src/gh_skyline/ascii/: block.py  generator.py  text.py
src/gh_skyline/cli/: root.py  skyline.py
src/gh_skyline/core/: errors.py  logger.py  utils.py
src/gh_skyline/github/: auth.py  client.py
src/gh_skyline/models/: types.py
src/gh_skyline/stl/: generator.py  writer.py
testdata/parity/: cases.yaml
testdata/parity/ascii/: mona-2024.txt
testdata/parity/cli/: skyline-help-2026.txt
testdata/parity/graphql/: contributions_mona_2020.json  contributions_mona_2021.json  contributions_mona_2022.json  contributions_mona_2023.json  contributions_mona_2024.json  user_join_year_mona.json  viewer_mona.json
tests/: conftest.py
tests/golden/: test_ascii_golden.py  test_cli_golden.py  test_stl_golden.py
tests/integration/: test_auth_host_parity.py  test_cli_contract.py  test_end_to_end_cli.py  test_package_entrypoint.py  test_skyline_flow.py
tests/parity/: test_go_vs_python.py
tests/unit/: test_main_entrypoint.py
tests/unit/ascii/: test_generator.py
tests/unit/core/: test_errors.py  test_utils.py
tests/unit/github/: test_client.py
tests/unit/models/: test_types.py
tests/unit/stl/: test_stl_generator.py  (+1 more)
tools/: generate_parity_fixtures.py  import_go_parity_artifacts.py  import_parity_artifacts.py
(+6 files in other folders)
