[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-skyline-python"
version = "0.1.0"
description = "Python migration scaffold for GitHub Skyline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gh-skyline = "gh_skyline.__main__:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
